[package]
name = "wasm-bindings"
version = "0.1.0"
authors = ["Yashodhan Joshi <yjdoc2@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
pcb-rs = {path="../../pcb-rs/crates/pcb-rs"}
cpu = {path="../cpu"}
ram = {path="../ram"}
basic-gates = {path="../basic-gates"}
ripple-carry-adder = {path="../ripple-carry-adder"}
cla-adder = {path = "../cla-adder"}
latches = {path="../latches"}
ring-counter = {path="../ring-counter"}



[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
